:heavy_check_mark: Сборка #4

--- a/4/index.html
+++ b/4/index.html
@@ -41,21 +41,20 @@
         </ul>
         </nav>
 </header>
-<main class="main-content">
+<main class="main-container main-content">
+  <div class="page-container">
   <section class="hero">
     <h1>
-      <span class="visually-hidden">
+      <span class="visually-hidden" hidden>
         Добро пожаловать в Седону!
       </span>
     </h1>
-    <div class="welcome">
     <img class="hero-image-description" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в Седону! Потому что Гранд-Каньон - отстой!">
-    </div>
-  </section>
+    </section>
   <section class="advantages">
-    <h2 class="title-advantages">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+    <h2 class="title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
     <p class="description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-  <h2 class="visually-hidden">Преимущества</h2>
+  <h2 class="visually-hidden" hidden>Преимущества</h2>
   <ul class="advantages-list">
     <li class="dark-background">
       <h3 class="title-advantages-list">Настоящий городок</h3>
@@ -70,11 +69,11 @@
       <h3 class="title-item">Красивая дорога</h3>
       <p class="description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
       </li>
-<li class="light-background-bridge">
+<li class="light-background">
       <h3 class="title-item">Мало туристов</h3>
       <p class="description">Большинство едет в Гранд Каньон и толпится там</p>
       </li>
-<li class="dark-background">
+<li class="dark-background bridge">
       <div class="image-bridge"></div>
       <h3 class="title-advantages-list">Там есть мост дьявола</h3>
       <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -82,7 +81,7 @@
       </ul>
       <ul class="advantages-service">
 <li class="advantages-item-service">
-  <h2 class="title-advantages">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+  <h2 class="title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
   <p class="description">Опытный персонал и качественное обслуживание!</p>
   </li>
   <li class="service-medium-background">
@@ -91,19 +90,19 @@
   <p class="description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
   </li>
   <li class="service">
-    <h3 class="title-service">Еда</h3>
     <div class="burger"></div>
+    <h3 class="title-service">Еда</h3>
     <p class="description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
     </li>
     <li class="service-medium-background">
-      <h3 class="title-service">Сувениры</h3>
       <div class="gifts"></div>
+      <h3 class="title-service">Сувениры</h3>
       <p class="description">Не только китайского, но и настоящего местного производства!</p>
       </li>
   </ul>
   </section>
   <section class="search-hotels">
-    <h2 class="search-hotels-title">Заинтересовались?</h2>
+    <h2 class="title">Заинтересовались?</h2>
     <p class="description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
     <a class="search-catalog" href="catalog.html">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
     </section>
@@ -115,10 +114,12 @@
         <button class="subscribe-button" type="submit">Подписаться</button>
       </form>
 </section>
+</div>
 </main>
 <footer>
+  <div class="footer-container">
   <h3>
-      <span class="visually-hidden">Социальные сети</span>
+      <span class="visually-hidden" hidden>Социальные сети</span>
     </h3>
           <ul class="list-social">
             <li class="item-social">
@@ -126,7 +127,7 @@
                 <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M24.1164 1.80445C24.2824 1.25845 24.1164 0.856445 23.3214 0.856445H20.6964C20.0284 0.856445 19.7204 1.20345 19.5534 1.58645C19.5534 1.58645 18.2184 4.78245 16.3274 6.85845C15.7154 7.46045 15.4374 7.65145 15.1034 7.65145C14.9364 7.65145 14.6854 7.46045 14.6854 6.91345V1.80445C14.6854 1.14845 14.5014 0.856445 13.9454 0.856445H9.81738C9.40038 0.856445 9.14938 1.16045 9.14938 1.44945C9.14938 2.07045 10.0954 2.21445 10.1924 3.96245V7.76045C10.1924 8.59345 10.0394 8.74444 9.70538 8.74444C8.81538 8.74444 6.65038 5.53345 5.36538 1.85945C5.11638 1.14445 4.86438 0.856445 4.19338 0.856445H1.56638C0.816382 0.856445 0.666382 1.20345 0.666382 1.58645C0.666382 2.26845 1.55638 5.65645 4.81138 10.1374C6.98138 13.1974 10.0364 14.8564 12.8194 14.8564C14.4884 14.8564 14.6944 14.4884 14.6944 13.8534V11.5404C14.6944 10.8034 14.8524 10.6564 15.3814 10.6564C15.7714 10.6564 16.4384 10.8484 17.9964 12.3234C19.7764 14.0724 20.0694 14.8564 21.0714 14.8564H23.6964C24.4464 14.8564 24.8224 14.4884 24.6064 13.7604C24.3684 13.0364 23.5184 11.9854 22.3914 10.7384C21.7794 10.0284 20.8614 9.26345 20.5824 8.88045C20.1934 8.38945 20.3044 8.17044 20.5824 7.73345C20.5824 7.73345 23.7824 3.30745 24.1154 1.80445H24.1164Z" fill="#83B3D3"/>
                   </svg>
-                  <span class="visually-hidden">Вконтакте</span>
+                  <span class="visually-hidden" hidden>Вконтакте</span>
               </a>
             </li>
             <li class="item-social">
@@ -134,7 +135,7 @@
 <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
   <path d="M16.785 0.955705L0.840489 7.1042C-0.247661 7.54126 -0.241365 8.14828 0.640845 8.41897L4.73445 9.69597L14.2058 3.72014C14.6537 3.44766 15.0629 3.59424 14.7265 3.89281L7.05283 10.8183H7.05103L7.05283 10.8192L6.77045 15.0387C7.18413 15.0387 7.36669 14.8489 7.59871 14.625L9.58705 12.6915L13.7229 15.7464C14.4855 16.1664 15.0332 15.9506 15.2229 15.0405L17.9379 2.2453C18.2158 1.13107 17.5126 0.626562 16.785 0.955705Z" fill="#83B3D3"/>
   </svg>
-                <span class="visually-hidden">Телеграмм</span>
+                <span class="visually-hidden" hidden>Телеграмм</span>
                 </a>
               </li>
             <li class="item-social">
@@ -142,14 +143,16 @@
             <svg width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M18.9402 0.356445H3.50738C1.64668 0.356445 0.333252 1.9502 0.333252 3.75645V13.8502C0.333252 15.7627 1.64668 17.3564 3.50738 17.3564H19.1591C20.8009 17.3564 22.3333 15.7627 22.3333 13.9564V3.75645C22.1143 1.9502 20.8009 0.356445 18.9402 0.356445ZM7.99494 12.8939V4.81894L15.3283 8.85645L7.99494 12.8939Z" fill="#83B3D3"/>
                   </svg>
-                    <span class="visually-hidden">Ютуб</span>
+                    <span class="visually-hidden" hidden>Ютуб</span>
                   </a>
             </li>
-    <li class="phone">
-    <span class="visually-hidden">Телефон</span>
+          </ul>
+
+    <p class="phone">
+    <span class="visually-hidden" hidden>Телефон</span>
     <a class="address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-    </li>
-    </ul>
+    </p>
+
     <p class="about-text">
     <a href="https://htmlacademy.ru/">
 <svg width="115" height="33" viewBox="0 0 115 34" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -166,9 +169,10 @@
   <path d="M98.2 18.2564C96.6 18.2564 95.3 19.0564 94.6 20.2564H94.5C93.9 19.0564 92.7 18.2564 91.1 18.2564C89.7 18.2564 88.6 18.9564 88 20.0564V18.5564H86.1V29.1564H88.1V23.7564C88.1 21.7564 89.1 20.3564 90.7 20.2564C92.2 20.2564 93.1 21.2564 93.1 22.8564V29.1564H95.1V23.5564C95.1 21.1564 96.5 20.2564 97.7 20.2564C99.2 20.2564 100.1 21.2564 100.1 22.8564V29.1564H102.1V22.6564C102.2 20.0564 100.7 18.2564 98.2 18.2564Z" fill="black"/>
   <path d="M109.4 27.3564L105.8 18.4564H103.6L108.4 30.0564C108.1 30.9564 107.7 31.2564 106.7 31.2564H104.2V33.2564H106.7C108.5 33.2564 109.5 32.4564 110.2 30.6564L114.9 18.4564H112.8L109.4 27.3564Z" fill="black"/>
   </svg>
-    <span class="visually-hidden">Сайт создан htmlacademy</span>
+    <span class="visually-hidden" hidden>Сайт создан htmlacademy</span>
     </a>
     </p>
+    </div>
     </footer>
     </body>
     </html>
