Микросетки на флексах главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -26,11 +26,11 @@
         </ul>
         <ul class="navigation-user">
           <li class="navigation-item">
-              <a class="navigation-search" href="#">
+              <a class="navigation-link" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           <li class="navigation-item">
-            <a class="navigation-favorite" href="#">
+            <a class="navigation-link" href="#">
               <span class="amount-favorites">12</span>
               <span class="visually-hidden">Избранное</span>
             </a>
@@ -123,7 +123,6 @@
 
         <section class="result-search">
   <h2 class="title">Найдено гостиниц: 38</h2>
-
     <select class="select-control" aria-label="Сортировка">
       <option value="cheap">Сначала дешевые</option>
       <option value="popular">Сначала популярные</option>
