Микросетки на флексах

--- a/index.html
+++ b/index.html
@@ -63,26 +63,36 @@
   <h2 class="visually-hidden">Преимущества</h2>
   <ul class="advantages-list">
     <li class="dark-background">
-      <h3 class="title-advantages-list">Настоящий городок</h3>
+      <div class="advantages-container">
+        <h3 class="title-item">Настоящий городок</h3>
       <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+      </div>
       <div class="image-advantages"></div>
       </li>
 <li class="light-background">
+  <div class="advantages-container">
       <h3 class="title-item">Небольшая площадь</h3>
-      <p class="description">Все достопримечательности находятся очень близко</p>
+      <p>Все достопримечательности находятся очень близко</p>
+    </div>
       </li>
 <li class="medium-background">
+  <div class="advantages-container">
       <h3 class="title-item">Красивая дорога</h3>
-      <p class="description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+      <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+    </div>
       </li>
 <li class="light-background">
+  <div class="advantages-container">
       <h3 class="title-item">Мало туристов</h3>
-      <p class="description">Большинство едет в Гранд Каньон и толпится там</p>
+      <p>Большинство едет в Гранд Каньон и толпится там</p>
+    </div>
       </li>
 <li class="dark-background bridge">
-      <div class="image-bridge"></div>
-      <h3 class="title-advantages-list">Там есть мост дьявола</h3>
+  <div class="advantages-container">
+      <h3 class="title-item">Там есть мост дьявола</h3>
       <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+    </div>
+    <div class="image-bridge"></div>
       </li>
       </ul>
       <ul class="advantages-service">
@@ -91,19 +101,25 @@
   <p class="description">Опытный персонал и качественное обслуживание!</p>
   </li>
   <li class="light-background">
+    <div class="service-container">
     <div class="home-advantages"></div>
   <h3 class="title-item">Жильё</h3>
-  <p class="description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+  <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+</div>
   </li>
   <li class="service">
+    <div class="service-container">
     <div class="burger"></div>
     <h3 class="title-item">Еда</h3>
-    <p class="description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-    </li>
+    <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+    </div>
+  </li>
     <li class="light-background">
+      <div class="service-container">
       <div class="gifts"></div>
       <h3 class="title-item">Сувениры</h3>
-      <p class="description">Не только китайского, но и настоящего местного производства!</p>
+      <p>Не только китайского, но и настоящего местного производства!</p>
+      </div>
       </li>
   </ul>
   </section>
