Микросетки на флексах для всех страниц
1.  На странице каталога фильтры и сортировка не сделаны.
2. карточка товара больше на 5px от высоты макета, не могу понять почему

--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
     <p class="description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
     <a class="button" href="catalog.html">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
     </section>
-    <section class="subscribe">
-      <h2 class="title">Подпишитесь на рассылку</h2>
+    <section class="subscribe main">
+      <h2 class="title invert">Подпишитесь на рассылку</h2>
     <p class="description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-        <input class="field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required>
+        <input class="field" placeholder="Ваш e-mail" type="email" name="subscribe-email">
         <button class="button select" type="submit">Подписаться</button>
       </form>
   </section>
