--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
     <div class="page-container">
       <header class="page-header">
         <nav class="navigation">
-          <a class="navigation-logo" href="index.html" aria-current="page">
+          <a class="navigation-logo" href="index.html">
             <img class="page-header-logo" src="images/log.svg" width="140" height="70" alt="Логотип сайта «Седона».">
           </a>
           <ul class="nav-list">
@@ -27,11 +27,17 @@
         <ul class="navigation-user">
           <li class="navigation-item">
               <a class="navigation-link" href="#">
+<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <path d="M19.5 18.0083L15.8 14.3287C16.8 13.0359 17.5 11.3453 17.5 9.4558C17.5 5.08011 13.9 1.5 9.5 1.5C5.1 1.5 1.5 5.17956 1.5 9.55525C1.5 13.9309 5.1 17.511 9.5 17.511C11.3 17.511 13 16.9144 14.4 15.8204L18.1 19.5L19.5 18.0083ZM9.5 15.5221C6.2 15.5221 3.5 12.837 3.5 9.55525C3.5 6.27348 6.2 3.5884 9.5 3.5884C12.8 3.5884 15.5 6.27348 15.5 9.55525C15.5 12.837 12.8 15.5221 9.5 15.5221Z" fill="black"/>
+  </svg>
               <span class="visually-hidden">Поиск</span>
             </a>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <span class="amount-favorites">12</span>
+              <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.9 17C8.6 17 8.3 16.9 8.1 16.6C2.7 10.5 1.4 9.1 1.1 8.7C0.4 7.8 0 6.6 0 5.4C0 2.4 2.4 0 5.5 0C6.8 0 8 0.5 9 1.3C10 0.5 11.3 0 12.5 0C15.5 0 18 2.4 18 5.4C18 6.7 17.5 7.9 16.7 8.8L9.7 16.7C9.5 16.9 9.3 17 8.9 17ZM2.9 7.5C3.2 7.9 6.4 11.5 9 14.4L15.2 7.4C15.7 6.9 15.9 6.2 15.9 5.4C15.9 3.6 14.4 2.1 12.6 2.1C11.6 2.1 10.6 2.6 9.9 3.4C9.6 3.7 9.3 3.8 9 3.8C8.7 3.8 8.4 3.6 8.2 3.4C7.5 2.6 6.5 2.1 5.5 2.1C3.7 2.1 2.2 3.6 2.2 5.4C2.1 6.3 2.5 7 2.9 7.5C2.8 7.5 2.8 7.5 2.9 7.5Z" fill="black"/>
+                </svg>
+              <!-- <span class="amount-favorites">12</span> -->
               <span class="visually-hidden">Избранное</span>
             </a>
             </li>
@@ -47,9 +53,13 @@
     <h1 class="inner-header-title">Гостиницы Седоны</h1>
     <ul class="breadcrumbs">
       <li class="breadcrumbs-item">
-        <a class="breadcrumbs-link" href="index.html"><span class="visually-hidden">Переход на главную страницу</span></a>
+        <a class="breadcrumbs-link" href="index.html">
+          <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M6.5 0.5L0.5 6.30006V12.5001H12.5V6.30006L6.5 0.5ZM11.5 11.5001H1.5V6.70005L6.5 1.9L11.5 6.70005V11.5001Z" fill="white"/>
+            <path d="M4.5 10.5001H5.5V8.00005H7.5V10.5001H8.5V7.00005H4.5V10.5001Z" fill="white"/>
+            </svg>
+            <span class="visually-hidden">Переход на главную страницу</span></a>
         </li>
-        <li class="further"></li>
         <li class="breadcrumbs-item">Гостиницы
       </li>
     </ul>
@@ -131,82 +141,123 @@
     <ul class="show">
       <li class="button-show">
     <a class="card" href="#" >
+      <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M4 0H0V6H4V0Z" fill="black"/>
+        <path d="M16 0H12V6H16V0Z" fill="black"/>
+        <path d="M10 0H6V6H10V0Z" fill="black"/>
+        <path d="M4 8H0V14H4V8Z" fill="black"/>
+        <path d="M16 8H12V14H16V8Z" fill="black"/>
+        <path d="M10 8H6V14H10V8Z" fill="black"/>
+        </svg>
       <span class="visually-hidden">Показать карточки</span>
     </a>
   </li>
     <li class="button-show">
     <a class="slide" href="#" >
+      <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M16 12H0V14H16V12Z" fill="black"/>
+        <path d="M14 2V8H2V2H14ZM16 0H0V10H16V0Z" fill="black"/>
+        </svg>
       <span class="visually-hidden">Показать одну на странице</span>
     </a>
   </li>
     <li class="button-show">
     <a class="list" href="#" >
+      <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M2 0H0V2H2V0Z" fill="black"/>
+        <path d="M16 0H4V2H16V0Z" fill="black"/>
+        <path d="M2 4H0V6H2V4Z" fill="black"/>
+        <path d="M16 4H4V6H16V4Z" fill="black"/>
+        <path d="M2 8H0V10H2V8Z" fill="black"/>
+        <path d="M16 8H4V10H16V8Z" fill="black"/>
+        <path d="M2 12H0V14H2V12Z" fill="black"/>
+        <path d="M16 12H4V14H16V12Z" fill="black"/>
+        </svg>
       <span class="visually-hidden">Показать список</span>
     </a>
   </li>
     </ul>
-
-
     </section>
-  <section class="hotels">
+    <section class="hotels">
   <ul class="cards">
     <li class="card">
     <a class="card-image" href="#">
       <img src="images/hotels/amara.jpg" width="300" height="212" alt="Звездное небо на фоне каньона.">
     </a>
-      <a class="card-title" href="#">
-        <h3>Amara Resort & Spa</h3></a>
+      <h3 class="title-item">Amara Resort & Spa</h3>
+      <div class="hotels-description">
       <p class="card-description">Гостиница</p>
       <p class="card-price">от 4000 ₽</p>
-      <a class="link-card" href="#">ПОДРОБНЕЕ</a>
-      <button class="select" type="button">В ИЗБРАННОЕ</button>
+      </div>
+      <div class="wrapper-button">
+      <a class="button link-card" href="#">ПОДРОБНЕЕ</a>
+      <button class="button select" type="button">В ИЗБРАННОЕ</button>
+      </div>
+      <div class="wrapper-rate">
         <p class="stars-4"></p>
         <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5</span>
         <p class="rate">Рейтинг: 8,5</p>
+      </div>
       </li>
-      <li>
+      <li class="card">
       <a class="card-image" href="#">
         <img src="images/hotels/villas.jpg" width="300" height="212" alt="Радуга на фоне гор.">
       </a>
-      <a class="card-title" href="#">
-        <h3>Villas at Poco Diablo</h3></a>
+      <h3 class="title-item">Villas at Poco Diablo</h3>
+      <div class="hotels-description">
         <p class="card-description">Гостиница</p>
         <p class="card-price">От 5000 ₽</p>
-        <a class="link-card" href="#">ПОДРОБНЕЕ</a>
-          <button class="selected" type="button">В ИЗБРАННОМ</button>
+        </div>
+        <div class="wrapper-button">
+        <a class="button link-card" href="#">ПОДРОБНЕЕ</a>
+          <button class="button selected" type="button">В ИЗБРАННОМ</button>
+          </div>
+          <div class="wrapper-rate">
           <p class="stars-4"></p>
             <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5</span>
             <p class="rate">Рейтинг: 9,2</p>
+            </div>
           </li>
           <li class="card">
             <a class="card-image" href="#">
               <img src="images/hotels/desert.jpg" width="300" height="212" alt="Горы на фоне голубого неба.">
             </a>
-            <a class="card-title" href="#">
-              <h3>Desert Quail Inn</h3></a>
+            <h3 class="title-item">Desert Quail Inn</h3>
+            <div class="hotels-description">
               <p class="card-description">Гостиница</p>
               <p class="card-price">От 2500 ₽</p>
-              <a class="link-card" href="#">ПОДРОБНЕЕ</a>
-              <button class="select" type="button">В ИЗБРАННОЕ</button>
+            </div>
+            <div class="wrapper-button">
+              <a class="button link-card" href="#">ПОДРОБНЕЕ</a>
+              <button class="button select" type="button">В ИЗБРАННОЕ</button>
+              </div>
+              <div class="wrapper-rate">
                 <p class="stars-3"></p>
                 <span class="visually-hidden">Количество звезд гостиницы - 3 звезды из 5</span>
                 <p class="rate">Рейтинг: 6,9</p>
+                </div>
               </li>
               <li class="card">
                 <a class="card-image" href="#">
                   <img src="images/hotels/green.jpg" width="300" height="212" alt="Горы на фоне звездного неба.">
                 </a>
-                <a class="card-title" href="#">
-                  <h3>GreenTree Inn</h3></a>
+                <h3 class="title-item">GreenTree Inn</h3>
+                <div class="hotels-description">
                   <p class="card-description">Гостиница</p>
                   <p class="card-price">От 1500 ₽</p>
-                  <a class="link-card" href="#">ПОДРОБНЕЕ</a>
-                  <button class="select" type="button">В ИЗБРАННОЕ</button>
+                  </div>
+                  <div class="wrapper-button">
+                  <a class="button link-card" href="#">ПОДРОБНЕЕ</a>
+                  <button class="button select" type="button">В ИЗБРАННОЕ</button>
+                  </div>
+                  <div class="wrapper-rate">
                     <p class="stars-2"></p>
                     <span class="visually-hidden">Количество звезд гостиницы - 2 звезды из 5</span>
                     <p class="rate">Рейтинг: 5,0</p>
+                    </div>
                   </li>
     </ul>
+    </section>
     <ul class="pagination">
     <li class="pagination-item">
         <a class="pagination-link pagination-current">1</a>
@@ -221,20 +272,19 @@
         <a class="pagination-link" href="#">4</a>
       </li>
       <li class="pagination-item">
-        <a class="pagination-link-points" href="#">...</a>
+        <a class="pagination-link points" href="#">...</a>
       </li>
       <li class="pagination-item">
         <a class="pagination-link" href="#">10</a>
       </li>
       </ul>
-    </section>
-    <section class="subscribe-catalog">
+    <section class="subscribe">
       <h2 class="title">Подпишитесь на рассылку</h2>
-    <p class="description">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-        <input class="field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required>
-        <button class="subscribe-button" type="submit">Подписаться</button>
-      </form>
+      <p class="description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+          <input class="field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required>
+          <button class="button select" type="submit">Подписаться</button>
+        </form>
 </section>
 </main>
 <footer>
