--- a/index.html
+++ b/index.html
@@ -65,32 +65,32 @@
     <li class="dark-background">
       <div class="advantages-container">
         <h3 class="title-item">Настоящий городок</h3>
-      <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+      <p class="text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
       </div>
       <div class="image-advantages"></div>
       </li>
 <li class="light-background">
   <div class="advantages-container">
       <h3 class="title-item">Небольшая площадь</h3>
-      <p>Все достопримечательности находятся очень близко</p>
+      <p class="text">Все достопримечательности находятся очень близко</p>
     </div>
       </li>
 <li class="medium-background">
   <div class="advantages-container">
       <h3 class="title-item">Красивая дорога</h3>
-      <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+      <p class="text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
     </div>
       </li>
 <li class="light-background">
   <div class="advantages-container">
       <h3 class="title-item">Мало туристов</h3>
-      <p>Большинство едет в Гранд Каньон и толпится там</p>
+      <p class="text">Большинство едет в Гранд Каньон и толпится там</p>
     </div>
       </li>
 <li class="dark-background bridge">
   <div class="advantages-container">
       <h3 class="title-item">Там есть мост дьявола</h3>
-      <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+      <p class="text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
     </div>
     <div class="image-bridge"></div>
       </li>
@@ -104,21 +104,21 @@
     <div class="service-container">
     <div class="home-advantages"></div>
   <h3 class="title-item">Жильё</h3>
-  <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+  <p class="text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
 </div>
   </li>
   <li class="service">
     <div class="service-container">
     <div class="burger"></div>
     <h3 class="title-item">Еда</h3>
-    <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+    <p class="text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
     </div>
   </li>
     <li class="light-background">
       <div class="service-container">
       <div class="gifts"></div>
       <h3 class="title-item">Сувениры</h3>
-      <p>Не только китайского, но и настоящего местного производства!</p>
+      <p class="text">Не только китайского, но и настоящего местного производства!</p>
       </div>
       </li>
   </ul>
