Сетки на гридах

--- a/catalog.html
+++ b/catalog.html
@@ -179,86 +179,76 @@
   </li>
     </ul>
     </section>
-    <div class="hotels">
-  <ul class="cards">
+      <ul class="cards">
     <li class="card">
     <a class="card-image" href="#">
       <img src="images/hotels/amara.jpg" width="300" height="212" alt="Звездное небо на фоне каньона.">
     </a>
       <h3 class="title-item">Amara Resort & Spa</h3>
-      <div class="hotels-description">
-      <p class="card-description">Гостиница</p>
-      <p class="card-price">от 4000 ₽</p>
-      </div>
-      <div class="wrapper-button">
+      <span class="card-description">Гостиница</span>
+      <span class="card-price">от 4000 ₽</span>
       <a class="button link-card" href="#">ПОДРОБНЕЕ</a>
       <button class="button select" type="button">В ИЗБРАННОЕ</button>
-      </div>
-      <div class="wrapper-rate">
-        <p class="stars-4"></p>
+        <span class="stars-4"></span>
         <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5</span>
-        <p class="rate">Рейтинг: 8,5</p>
-      </div>
+        <span class="rate">Рейтинг: 8,5</span>
       </li>
       <li class="card">
       <a class="card-image" href="#">
         <img src="images/hotels/villas.jpg" width="300" height="212" alt="Радуга на фоне гор.">
       </a>
       <h3 class="title-item">Villas at Poco Diablo</h3>
-      <div class="hotels-description">
-        <p class="card-description">Гостиница</p>
-        <p class="card-price">От 5000 ₽</p>
-        </div>
-        <div class="wrapper-button">
+
+        <span class="card-description">Гостиница</span>
+        <span class="card-price">От 5000 ₽</span>
+
+
         <a class="button link-card" href="#">ПОДРОБНЕЕ</a>
           <button class="button selected" type="button">В ИЗБРАННОМ</button>
-          </div>
-          <div class="wrapper-rate">
-          <p class="stars-4"></p>
+
+
+          <span class="stars-4"></span>
             <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5</span>
-            <p class="rate">Рейтинг: 9,2</p>
-            </div>
+            <span class="rate">Рейтинг: 9,2</span>
+
           </li>
           <li class="card">
             <a class="card-image" href="#">
               <img src="images/hotels/desert.jpg" width="300" height="212" alt="Горы на фоне голубого неба.">
             </a>
             <h3 class="title-item">Desert Quail Inn</h3>
-            <div class="hotels-description">
-              <p class="card-description">Гостиница</p>
-              <p class="card-price">От 2500 ₽</p>
-            </div>
-            <div class="wrapper-button">
+
+              <span class="card-description">Гостиница</span>
+              <span class="card-price">От 2500 ₽</span>
+
+
               <a class="button link-card" href="#">ПОДРОБНЕЕ</a>
               <button class="button select" type="button">В ИЗБРАННОЕ</button>
-              </div>
-              <div class="wrapper-rate">
-                <p class="stars-3"></p>
+
+                <span class="stars-3"></span>
                 <span class="visually-hidden">Количество звезд гостиницы - 3 звезды из 5</span>
-                <p class="rate">Рейтинг: 6,9</p>
-                </div>
+                <span class="rate">Рейтинг: 6,9</span>
+
               </li>
               <li class="card">
                 <a class="card-image" href="#">
                   <img src="images/hotels/green.jpg" width="300" height="212" alt="Горы на фоне звездного неба.">
                 </a>
                 <h3 class="title-item">GreenTree Inn</h3>
-                <div class="hotels-description">
-                  <p class="card-description">Гостиница</p>
-                  <p class="card-price">От 1500 ₽</p>
-                  </div>
-                  <div class="wrapper-button">
+
+                  <span class="card-description">Гостиница</span>
+                  <span class="card-price">От 1500 ₽</span>
+
                   <a class="button link-card" href="#">ПОДРОБНЕЕ</a>
                   <button class="button select" type="button">В ИЗБРАННОЕ</button>
-                  </div>
-                  <div class="wrapper-rate">
-                    <p class="stars-2"></p>
+
+                    <span class="stars-2"></span>
                     <span class="visually-hidden">Количество звезд гостиницы - 2 звезды из 5</span>
-                    <p class="rate">Рейтинг: 5,0</p>
-                    </div>
+                    <span class="rate">Рейтинг: 5,0</span>
+                    
                   </li>
     </ul>
-  </div>
+
     <ul class="pagination">
     <li class="pagination-item">
         <a class="pagination-link pagination-current">1</a>
