Главная страница, раздел 9

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </li>
 <li class="dark-background bridge">
   <div class="advantages-container">
-      <h3 class="title-item">Там есть мост дьявола</h3>
+      <h3 class="title-item">Там есть <br>мост дьявола</h3>
       <p class="text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
     </div>
     <div class="image-bridge"></div>
@@ -97,41 +97,42 @@
     <div class="service-container">
     <div class="home-advantages"></div>
   <h3 class="title-item">Жильё</h3>
-  <p class="text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+  <p class="text">Рекомендуем пожить <br>в настоящем мотеле, <br> всё как в кино!</p>
 </div>
   </li>
   <li class="service">
     <div class="service-container">
     <div class="burger"></div>
     <h3 class="title-item">Еда</h3>
-    <p class="text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+    <p class="text">Всегда заказывайте<br>топовый фирменный бургер, вы не разочаруетесь!</p>
     </div>
   </li>
     <li class="light-background">
       <div class="service-container">
       <div class="gifts"></div>
       <h3 class="title-item">Сувениры</h3>
-      <p class="text">Не только китайского, но и настоящего местного производства!</p>
+      <p class="text">Не только китайского, <br> но и настоящего местного производства!</p>
       </div>
       </li>
   </ul>
   </section>
   <section class="search-hotels">
     <h2 class="title">Заинтересовались?</h2>
-    <p class="description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+    <p class="description">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
     <a class="button" href="catalog.html">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
     </section>
     <section class="subscribe main">
       <h2 class="title invert">Подпишитесь на рассылку</h2>
-    <p class="description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+    <p class="description">Только полезная информация и никакого спама, <br>честное бойскаутское!</p>
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-        <input class="field" placeholder="Ваш e-mail" type="email" name="subscribe-email">
+        <input class="field-mail" placeholder="Ваш e-mail" type="email" name="subscribe-email">
         <button class="button select" type="submit">Подписаться</button>
       </form>
   </section>
 </main>
 <footer>
   <div class="footer-container">
+
   <h3>
       <span class="visually-hidden">Социальные сети</span>
     </h3>
@@ -161,14 +162,12 @@
                   </a>
             </li>
           </ul>
-    <p class="phone">
-    <span class="visually-hidden">Телефон</span>
-    <a class="address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-    </p>
+        <a class="address-phone" href="tel:+78128121212">+7 (812) 812-12-12
+      <span class="visually-hidden">Телефон</span>
+    </a>
 
-    <p class="about-text">
-    <a href="https://htmlacademy.ru/">
-<svg width="115" height="33" viewBox="0 0 115 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+       <a class="about-text" href="https://htmlacademy.ru/">
+<svg width="115" height="33" viewBox="0 0 115 33" fill="none" xmlns="http://www.w3.org/2000/svg">
   <path d="M0 13.2564V15.8564H2.5V13.2564H0Z" fill="black"/>
   <path d="M11.6 4.85645C10 4.85645 8.8 5.55645 8 6.55645H7.9V0.356445H5.9V15.8564H7.9V10.5564C7.9 8.45645 9.2 6.95645 11.2 6.95645C13 6.95645 14.1 8.35645 14.1 10.1564V15.8564H16.1V9.75644C16.2 6.75644 14.3 4.85645 11.6 4.85645Z" fill="black"/>
   <path d="M26.6 5.15645H21.8V1.45645H19.8V5.25645H17.9V7.25645H19.8V13.2564C19.8 14.9564 20.8 15.9564 22.5 15.9564H26.6V13.9564H22.9C22.2 13.9564 21.8 13.5564 21.8 12.8564V7.15645H26.6V5.15645Z" fill="black"/>
@@ -184,8 +183,7 @@
   </svg>
     <span class="visually-hidden">Сайт создан htmlacademy</span>
     </a>
-    </p>
-    </div>
+        </div>
     </footer>
   </div>
     </body>
