--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </li>
   </ul>
   </section>
-  <section class="search-hotels" data-test="search">
+  <section class="search-hotels">
     <h2 class="title">Заинтересовались?</h2>
     <p class="description">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
     <a class="button" href="catalog.html">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
