--- a/catalog.html
+++ b/catalog.html
@@ -179,7 +179,7 @@
     </a>
       <h3 class="title-item">Amara Resort & Spa</h3>
       <span class="card-description">Гостиница</span>
-      <span class="card-price">от 4000 ₽</span>
+      <span class="card-price">От 4000 ₽</span>
       <a class="button link-card" href="#">ПОДРОБНЕЕ</a>
       <button class="button select" type="button">В ИЗБРАННОЕ</button>
         <span class="stars-4"></span>
@@ -294,10 +294,10 @@
                 </a>
               </li>
             <li class="item-social">
-                  <a class="social-button" href="https://www.youtube.com/user/">
-            <svg width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M18.9402 0.356445H3.50738C1.64668 0.356445 0.333252 1.9502 0.333252 3.75645V13.8502C0.333252 15.7627 1.64668 17.3564 3.50738 17.3564H19.1591C20.8009 17.3564 22.3333 15.7627 22.3333 13.9564V3.75645C22.1143 1.9502 20.8009 0.356445 18.9402 0.356445ZM7.99494 12.8939V4.81894L15.3283 8.85645L7.99494 12.8939Z" fill="#83B3D3"/>
-                  </svg>
+                  <a class="social-button yotube" href="https://www.youtube.com/user/">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="23" height="18" viewBox="0 0 23 18" fill="none">
+                      <path d="M18.9402 0.356445H3.50738C1.64668 0.356445 0.333252 1.9502 0.333252 3.75645V13.8502C0.333252 15.7627 1.64668 17.3564 3.50738 17.3564H19.1591C20.8009 17.3564 22.3333 15.7627 22.3333 13.9564V3.75645C22.1143 1.9502 20.8009 0.356445 18.9402 0.356445ZM7.99494 12.8939V4.81894L15.3283 8.85645L7.99494 12.8939Z" fill="#83B3D3"/>
+                    </svg>
                     <span class="visually-hidden">Ютуб</span>
                   </a>
             </li>
